added selected country plot

--- a/vaccinations_by_country.ipynb
+++ b/vaccinations_by_country.ipynb
@@ -19,11 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -42,11 +38,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Function that describes the current state of the interesting fields in a vaccination dataframe\n",
@@ -125,15 +117,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "logging.info(\"Local data directory holds: %s\", os.listdir(\"data\"))\n",
-    "print('\"state\" or \"world\"?')\n",
+    "print('Run US state analysis or world country analysis: \"state\" or \"world\"?')\n",
     "state_or_world = input()\n",
     "source_file = \"must enter a name\"\n",
     "\n",
@@ -160,11 +148,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#Log the countries with the most data\n",
@@ -188,11 +172,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "logging.info(log_vaccination_stats(\"Prior to filling in missing rows/days\", df_loaded))\n",
@@ -231,11 +211,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "df_interpolated = df_filled.sort_values(['location','date'])\n",
@@ -281,11 +257,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "df_interpolated['date_str']=df_interpolated.date.astype(str)\n",
@@ -324,11 +296,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "df_interpolated['date_str']=df_interpolated.date.astype(str)\n",
@@ -370,11 +338,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "\n",
@@ -414,11 +378,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "df_interpolated['date_str']=df_interpolated.date.astype(str)\n",
@@ -443,6 +403,26 @@
     "                         \"location\": \"Location\"\n",
     "                        }\n",
     "                )\n",
+    "fig.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_interpolated['date_str']=df_interpolated.date.astype(str)\n",
+    "import plotly.express as px\n",
+    "df_filtered = df_interpolated[df_interpolated[\"location\"].isin([\"United States\", \"Germany\", \"United Kingdom\", \"Canada\"])]\n",
+    "fig = px.line(data_frame=df_filtered,\n",
+    "                 title='Vaccinations per million across time selected countries',\n",
+    "              x=\"date_str\", \n",
+    "              y=\"daily_vaccinations_per_million\",\n",
+    "             #line_group=\"location\",\n",
+    "             #hover_name=\"location\",\n",
+    "             color=\"location\",\n",
+    "             )\n",
     "fig.show()\n"
    ]
   }
