Updated while playing with AI Workbench

--- a/vaccinations_by_country.ipynb
+++ b/vaccinations_by_country.ipynb
@@ -22,6 +22,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%pip install numpy pandas plotly.express  matplotlib\n",
+    "# !sudo python3 -m pip install numpy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
     "import plotly.express as px\n",
@@ -72,24 +82,24 @@
     "# create a series where the null elements are represented by true and a series where non_null elements are represented\n",
     "def log_vaccination_stats_2(banner,target_frame):\n",
     "    s2 =\"\\nNumber of records: {} daily_vaccinations              with data {} empty {}\".format(\n",
-    "        target_frame['location'].size, \n",
-    "        target_frame[pd.notnull(target_frame['daily_vaccinations'])]['daily_vaccinations'].size , \n",
+    "        target_frame['location'].size,\n",
+    "        target_frame[pd.notnull(target_frame['daily_vaccinations'])]['daily_vaccinations'].size ,\n",
     "        target_frame[pd.isnull(target_frame['daily_vaccinations'])]['daily_vaccinations'].size )\n",
     "    s3 = \"\\nNumber of records: {} daily_vaccinations_per_million with data {} empty {}\".format(\n",
-    "        target_frame['location'].size, \n",
-    "        target_frame[pd.notnull(target_frame['daily_vaccinations_per_million'])]['daily_vaccinations_per_million'].size , \n",
+    "        target_frame['location'].size,\n",
+    "        target_frame[pd.notnull(target_frame['daily_vaccinations_per_million'])]['daily_vaccinations_per_million'].size ,\n",
     "        target_frame[pd.isnull(target_frame['daily_vaccinations_per_million'])]['daily_vaccinations_per_million'].size )\n",
     "    s4 = \"\\nNumber of records: {} vaccinated_per_hundred         with data {} empty {}\".format(\n",
-    "        target_frame['location'].size, \n",
-    "        target_frame[pd.notnull(target_frame['people_fully_vaccinated_per_hundred'])]['people_fully_vaccinated_per_hundred'].size , \n",
+    "        target_frame['location'].size,\n",
+    "        target_frame[pd.notnull(target_frame['people_fully_vaccinated_per_hundred'])]['people_fully_vaccinated_per_hundred'].size ,\n",
     "        target_frame[pd.isnull(target_frame['people_fully_vaccinated_per_hundred'])]['people_fully_vaccinated_per_hundred'].size )\n",
     "    s5 = \"\\nNumber of records: {} total_vaccinations             with data {} empty {}\".format(\n",
-    "        target_frame['location'].size,                   \n",
-    "        target_frame[pd.notnull(target_frame['total_vaccinations'])]['total_vaccinations'].size , \n",
+    "        target_frame['location'].size,\n",
+    "        target_frame[pd.notnull(target_frame['total_vaccinations'])]['total_vaccinations'].size ,\n",
     "        target_frame[pd.isnull(target_frame['total_vaccinations'])]['total_vaccinations'].size )\n",
     "    return banner+s2+s3+s4+s5\n",
     "\n",
-    "# logs out the field types in a dataframe                                        \n",
+    "# logs out the field types in a dataframe\n",
     "def log_datatypes(banner, target_frame):\n",
     "    output = StringIO()\n",
     "    target_frame.info(buf=output)\n",
@@ -98,9 +108,9 @@
     "# Sort the data by date mixes by location so lets do ordered sorting on two columns\n",
     "def log_vaccination_samples(banner, target_frame):\n",
     "    return \"{} \\n{}\".format(\n",
-    "        banner , \n",
+    "        banner ,\n",
     "        target_frame.sort_values(['location','date'], ascending=True)[\n",
-    "            ['location','date','daily_vaccinations','daily_vaccinations_per_million','people_fully_vaccinated_per_hundred','total_vaccinations']])                                         \n"
+    "            ['location','date','daily_vaccinations','daily_vaccinations_per_million','people_fully_vaccinated_per_hundred','total_vaccinations']])\n"
    ]
   },
   {
@@ -120,6 +130,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "!curl https://covid.ourworldindata.org/data/vaccinations/vaccinations.csv -o data/vaccinations_world.csv\n",
+    "!curl https://covid.ourworldindata.org/data/vaccinations/us_state_vaccinations.csv -o data/vaccinations_state.csv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "logging.info(\"Local data directory holds: %s\", os.listdir(\"data\"))\n",
     "print('Run US state analysis or world country analysis: \"state\" or \"world\"?')\n",
     "state_or_world = input()\n",
@@ -130,9 +150,9 @@
     "    df_loaded = pd.read_csv('data/vaccinations_state.csv',parse_dates=True)\n",
     "elif (state_or_world =='world'):\n",
     "    df_loaded = pd.read_csv('data/vaccinations_world.csv',parse_dates=True)\n",
-    "else : \n",
+    "else :\n",
     "    raise RuntimeError(\"must enter 'state' or 'world' not what you entered\")\n",
-    "    \n",
+    "\n",
     "# Log unique location names\n",
     "logging.debug(\"Loaded data for countries\\n %s\", pd.unique(df_loaded[\"location\"]))\n",
     "\n",
@@ -248,9 +268,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## log(X),log(y) with vaccinations per hundered Y axis max value 70%\n",
+    "## log(X),log(y) with vaccinations per hundered Y axis max value 80%\n",
     "\n",
-    "The log(y) axis streteches the early progress and compresses the later gains.\n",
+    "The log(y) axis stretches the early progress and compresses the later gains.\n",
     "This is useful when in the early stages of the pandemic where the overall vaccination rates are low"
    ]
   },
@@ -262,17 +282,17 @@
    "source": [
     "df_interpolated['date_str']=df_interpolated.date.astype(str)\n",
     "import plotly.express as px\n",
-    "fig = px.scatter(data_frame=df_interpolated, \n",
+    "fig = px.scatter(data_frame=df_interpolated,\n",
     "                title='Full Vaccinated vs Daily Vaccinations (LOG,LOG)',\n",
-    "                 x=\"daily_vaccinations_per_million\", \n",
-    "                 y=\"people_fully_vaccinated_per_hundred\", \n",
+    "                 x=\"daily_vaccinations_per_million\",\n",
+    "                 y=\"people_fully_vaccinated_per_hundred\",\n",
     "                 animation_frame=\"date_str\",\n",
-    "                 animation_group=\"location\", \n",
+    "                 animation_group=\"location\",\n",
     "                 color='location',\n",
-    "                 hover_name=\"location\", \n",
-    "                 width=800, \n",
+    "                 hover_name=\"location\",\n",
+    "                 width=800,\n",
     "                 height=600,\n",
-    "                 log_x=True, \n",
+    "                 log_x=True,\n",
     "                 log_y=True,\n",
     "                 range_x=[100+df_interpolated['daily_vaccinations_per_million'].min(),\n",
     "                          df_interpolated['daily_vaccinations_per_million'].max()],\n",
@@ -289,8 +309,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## log(X),linear(y) with vaccinations per hundered Y axis max value 70%\n",
-    "This makes it more aparant how far we have to go"
+    "## log(X),linear(y) with vaccinations per hundred Y axis max value 80%\n",
+    "This makes it more aparent how far we have to go"
    ]
   },
   {
@@ -301,17 +321,17 @@
    "source": [
     "df_interpolated['date_str']=df_interpolated.date.astype(str)\n",
     "import plotly.express as px\n",
-    "fig = px.scatter(data_frame=df_interpolated, \n",
+    "fig = px.scatter(data_frame=df_interpolated,\n",
     "                 title='Full Vaccinated vs Daily Vaccinations (LOG,LOG)',\n",
-    "                 x=\"daily_vaccinations_per_million\", \n",
-    "                 y=\"people_fully_vaccinated_per_hundred\", \n",
+    "                 x=\"daily_vaccinations_per_million\",\n",
+    "                 y=\"people_fully_vaccinated_per_hundred\",\n",
     "                 animation_frame=\"date_str\",\n",
-    "                 animation_group=\"location\", \n",
+    "                 animation_group=\"location\",\n",
     "                 color='location',\n",
-    "                 hover_name=\"location\", \n",
-    "                 width=800, \n",
+    "                 hover_name=\"location\",\n",
+    "                 width=800,\n",
     "                 height=600,\n",
-    "                 log_x=True, \n",
+    "                 log_x=True,\n",
     "                 log_y=False,\n",
     "                 range_x=[500,\n",
     "                          df_interpolated['daily_vaccinations_per_million'].max()],\n",
@@ -319,7 +339,7 @@
     "                 labels={\"daily_vaccinations_per_million\": \"Daily Vaccinations / million\",\n",
     "                         \"people_fully_vaccinated_per_hundred\": \"Fully Vaccinated / 100\",\n",
     "                         \"location\": \"Location\"\n",
-    "                        }                 \n",
+    "                        }\n",
     "                )\n",
     "\n",
     "fig.show()\n"
@@ -330,8 +350,8 @@
    "metadata": {},
    "source": [
     "# Vaccinated / 100 over Daily Vaccinations raw number\n",
-    "## log(X),log(y) with vaccinations per hundered Y axis max value 70%\n",
-    "The log(y) axis streteches the early progress and compresses the later gains. \n",
+    "## log(X),log(y) with vaccinations per hundred Y axis max value 80%\n",
+    "The log(y) axis stretches the early progress and compresses the later gains. \n",
     "This is useful when in the early stages of the pandemic where the overall vaccination rates are low"
    ]
   },
@@ -344,17 +364,17 @@
     "\n",
     "df_interpolated['date_str']=df_interpolated.date.astype(str)\n",
     "import plotly.express as px\n",
-    "fig = px.scatter(data_frame=df_interpolated, \n",
+    "fig = px.scatter(data_frame=df_interpolated,\n",
     "    title='Full Vaccinated vs Daily Vaccinations (LOG,LOG)',\n",
-    "                 x=\"daily_vaccinations\", \n",
-    "                 y=\"people_fully_vaccinated_per_hundred\", \n",
+    "                 x=\"daily_vaccinations\",\n",
+    "                 y=\"people_fully_vaccinated_per_hundred\",\n",
     "                 animation_frame=\"date_str\",\n",
-    "                 animation_group=\"location\", \n",
+    "                 animation_group=\"location\",\n",
     "                 color='location',\n",
-    "                 hover_name=\"location\", \n",
-    "                 width=800, \n",
+    "                 hover_name=\"location\",\n",
+    "                 width=800,\n",
     "                 height=600,\n",
-    "                 log_x=True, \n",
+    "                 log_x=True,\n",
     "                 log_y=True,\n",
     "                 range_x=[100+df_interpolated['daily_vaccinations'].min(),\n",
     "                          df_interpolated['daily_vaccinations'].max()],\n",
@@ -362,7 +382,7 @@
     "                 labels={\"daily_vaccinations\": \"Daily Vaccinations - Raw\",\n",
     "                         \"people_fully_vaccinated_per_hundred\": \"Fully Vaccinated / 100\",\n",
     "                         \"location\": \"Location\"\n",
-    "                        }                 \n",
+    "                        }\n",
     "                )\n",
     "fig.show()"
    ]
@@ -371,8 +391,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## log(X),linear(y) with vaccinations per hundered Y axis max value 70%\n",
-    "This makes it more aparant how far we have to go"
+    "## log(X),linear(y) with vaccinations per hundered Y axis max value 80%\n",
+    "This makes it more apparent how far we have to go"
    ]
   },
   {
@@ -383,17 +403,17 @@
    "source": [
     "df_interpolated['date_str']=df_interpolated.date.astype(str)\n",
     "import plotly.express as px\n",
-    "fig = px.scatter(data_frame=df_interpolated, \n",
+    "fig = px.scatter(data_frame=df_interpolated,\n",
     "                 title='Full Vaccinated vs Daily Vaccinations (LOG,LINEAR)',\n",
-    "                 x=\"daily_vaccinations\", \n",
-    "                 y=\"people_fully_vaccinated_per_hundred\", \n",
+    "                 x=\"daily_vaccinations\",\n",
+    "                 y=\"people_fully_vaccinated_per_hundred\",\n",
     "                 animation_frame=\"date_str\",\n",
-    "                 animation_group=\"location\", \n",
+    "                 animation_group=\"location\",\n",
     "                 color='location',\n",
-    "                 hover_name=\"location\", \n",
-    "                 width=800, \n",
+    "                 hover_name=\"location\",\n",
+    "                 width=800,\n",
     "                 height=600,\n",
-    "                 log_x=True, \n",
+    "                 log_x=True,\n",
     "                 log_y=False,\n",
     "                 range_x=[100+df_interpolated['daily_vaccinations'].min(),\n",
     "                          df_interpolated['daily_vaccinations'].max()],\n",
@@ -407,6 +427,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## linear vacitations per million by date on the x axis"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -417,7 +444,7 @@
     "df_filtered = df_interpolated[df_interpolated[\"location\"].isin([\"United States\", \"Germany\", \"United Kingdom\", \"Canada\"])]\n",
     "fig = px.line(data_frame=df_filtered,\n",
     "                 title='Vaccinations per million across time selected countries',\n",
-    "              x=\"date_str\", \n",
+    "              x=\"date_str\",\n",
     "              y=\"daily_vaccinations_per_million\",\n",
     "             #line_group=\"location\",\n",
     "             #hover_name=\"location\",\n",
