First attempt at AI Workbench

--- a/code/vaccinations_by_country.ipynb
+++ b/code/vaccinations_by_country.ipynb
@@ -9,10 +9,26 @@
     "1. I got inspiration for doing this after seeing an early version by https://github.com/Ken-Freeman\n",
     "\n",
     "## Setup\n",
-    "Download the data csv file and put it in the data directory prior to running this program. The included shell scripts download data.\n",
+    "Download the data csv file and put it in the data directory prior to running this program. The included shell scripts download data."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!curl https://covid.ourworldindata.org/data/vaccinations/vaccinations.csv -o data/vaccinations_world.csv\n",
+    "!curl https://covid.ourworldindata.org/data/vaccinations/us_state_vaccinations.csv -o data/vaccinations_state.csv"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\n",
     "## Design Considerations and Artifacts\n",
-    "1. This notebook creates new variables when that would make no sense in a large data problem.\n",
+    "1. This notebook creates new variables when that would make no sense in a large data problem in which case we would want to stream data\n",
     "1. It does this so that we can go back and look at previous values"
    ]
   },
@@ -129,10 +145,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "!curl https://covid.ourworldindata.org/data/vaccinations/vaccinations.csv -o data/vaccinations_world.csv\n",
-    "!curl https://covid.ourworldindata.org/data/vaccinations/us_state_vaccinations.csv -o data/vaccinations_state.csv"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
