--- a/code/vaccinations_by_country.ipynb
+++ b/code/vaccinations_by_country.ipynb
@@ -14,12 +14,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/project/code\n",
+      "/usr/bin/sh: 1: cannot create data/vaccinations_world.csv: Directory nonexistent\n",
+      "/usr/bin/sh: 1: cannot create data/vaccinations_state.csv: Directory nonexistent\n"
+     ]
+    }
+   ],
    "source": [
-    "!curl https://covid.ourworldindata.org/data/vaccinations/vaccinations.csv -o data/vaccinations_world.csv\n",
-    "!curl https://covid.ourworldindata.org/data/vaccinations/us_state_vaccinations.csv -o data/vaccinations_state.csv"
+    "# we're sitting in /project/code\n",
+    "!curl https://covid.ourworldindata.org/data/vaccinations/vaccinations.csv >> ../data/vaccinations_world.csv\n",
+    "!curl https://covid.ourworldindata.org/data/vaccinations/us_state_vaccinations.csv  >> ../data/vaccinations_state.csv"
    ]
   },
   {
@@ -469,7 +480,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -483,7 +494,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
