--- a/code/vaccinations_by_country.ipynb
+++ b/code/vaccinations_by_country.ipynb
@@ -14,19 +14,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/project/code\n",
-      "/usr/bin/sh: 1: cannot create data/vaccinations_world.csv: Directory nonexistent\n",
-      "/usr/bin/sh: 1: cannot create data/vaccinations_state.csv: Directory nonexistent\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# we're sitting in /project/code\n",
     "!curl https://covid.ourworldindata.org/data/vaccinations/vaccinations.csv >> ../data/vaccinations_world.csv\n",
@@ -156,24 +146,17 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "logging.info(\"Local data directory holds: %s\", os.listdir(\"data\"))\n",
+    "logging.info(\"Local data directory holds: %s\", os.listdir(\"../data\"))\n",
     "print('Run US state analysis or world country analysis: \"state\" or \"world\"?')\n",
     "state_or_world = input()\n",
     "source_file = \"must enter a name\"\n",
     "\n",
     "#import data from csv\n",
     "if (state_or_world == 'state'):\n",
-    "    df_loaded = pd.read_csv('data/vaccinations_state.csv',parse_dates=True)\n",
+    "    df_loaded = pd.read_csv('../data/vaccinations_state.csv',parse_dates=True)\n",
     "elif (state_or_world =='world'):\n",
-    "    df_loaded = pd.read_csv('data/vaccinations_world.csv',parse_dates=True)\n",
+    "    df_loaded = pd.read_csv('../data/vaccinations_world.csv',parse_dates=True)\n",
     "else :\n",
     "    raise RuntimeError(\"must enter 'state' or 'world' not what you entered\")\n",
     "\n",
@@ -476,6 +459,13 @@
     "             )\n",
     "fig.show()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
