--- a/code/vaccinations_by_country.ipynb
+++ b/code/vaccinations_by_country.ipynb
@@ -163,13 +163,15 @@
     "# Log unique location names\n",
     "logging.debug(\"Loaded data for countries\\n %s\", pd.unique(df_loaded[\"location\"]))\n",
     "\n",
-    "# lets convert the dates from strings to real dates\n",
+    "# Convert the dates from strings to real dates\n",
     "logging.debug(log_datatypes(\"Schema prior to date conversion\", df_loaded))\n",
     "df_loaded['date'] = pd.to_datetime(df_loaded['date'])\n",
     "logging.debug(log_datatypes(\"Schema after to date conversion\", df_loaded))\n",
     "logging.info(log_vaccination_stats(\"On load\", df_loaded))\n",
     "df_loaded = df_loaded[(df_loaded['date'].dt.year > 2020)]\n",
-    "logging.info(log_vaccination_stats(\"After prune 2020\", df_loaded))"
+    "logging.info(log_vaccination_stats(\"After prune <= 2020\", df_loaded))\n",
+    "df_loaded = df_loaded[(df_loaded['date'].dt.year < 2023)]\n",
+    "logging.info(log_vaccination_stats(\"After prune >= 2023\", df_loaded))\n"
    ]
   },
   {
@@ -179,7 +181,7 @@
    "outputs": [],
    "source": [
     "#Log the countries with the most data\n",
-    "logging.debug(\"the number of days for each location %s\",df_loaded.location.value_counts())\n",
+    "logging.info(\"the number of days for each location %s\",df_loaded.location.value_counts())\n",
     "logging.debug(\"the number of countries with more than a month worth the data %s\",df_loaded.location.value_counts()[lambda day_count: day_count > 30])"
    ]
   },
@@ -206,7 +208,7 @@
     "\n",
     "# fill in missing dates https://stackoverflow.com/questions/44978196/pandas-filling-missing-dates-and-values-within-group\n",
     "# but leave new values as nan so that we can try and extrapolate\n",
-    "# this does not \"extrapolate\" the missing start/end values - probably should fill with 0 from start to first value\n",
+    "# This does not \"extrapolate\" the missing start/end values - probably should fill with 0 from start to first value\n",
     "df_filled = df_loaded.set_index(\n",
     "    ['date', 'location']\n",
     ").unstack(\n",
@@ -215,7 +217,10 @@
     "    'D', #fill_value=0\n",
     ").stack(\n",
     "    # True would drop all rows where all values are NAN which should never happen with this data because every row has a location name.\n",
-    "    dropna=False\n",
+    "    # not used with future_stack=True\n",
+    "    # dropna=False,\n",
+    "    # use the 3.0 behavior while we're using 2.x\n",
+    "    future_stack=True\n",
     ").sort_index(level=1).reset_index()\n",
     "\n",
     "logging.info(log_vaccination_stats_2(\"\\nAfter to adding missing rows/days\",df_filled))\n",
@@ -250,11 +255,11 @@
     "df_interpolated['people_fully_vaccinated_per_hundred'] = df_interpolated.groupby('location').people_fully_vaccinated_per_hundred.transform(lambda x: x.interpolate())\n",
     "df_interpolated['people_vaccinated'] = df_interpolated.groupby('location').people_vaccinated.transform(lambda x: x.interpolate())\n",
     "\n",
-    "# String values , iso code, site, etc are the same for all rows in a location so we ffill and bfill in case early rows are missing values\n",
+    "# String values, iso code, site, etc are the same for all rows in a location so we ffill and bfill in case early rows are missing values\n",
     "#df_interpolated['iso_code'] = df_interpolated.groupby('location').iso_code.ffill().bfill()\n",
     "logging.info(\"Interpolation finished\")\n",
     "\n",
-    "# Show the number of missing total vaccinations values - must run against ungrouped (?)\n",
+    "# Show the number of missing total vaccination values - must run against ungrouped (?)\n",
     "# count() is the number of non-nan\n",
     "logging.info(log_vaccination_stats(\"After data interpolation\", df_interpolated))\n",
     "logging.debug(log_vaccination_samples(\"After Interpolation: location\\n%s\", df_interpolated))"
@@ -265,6 +270,10 @@
    "metadata": {},
    "source": [
     "# Graph It!\n",
+    "#### Notes\n",
+    "\n",
+    "These graphs can take a long time to run, minutes\n",
+    "\n",
     "#### TODO\n",
     "Present more data as bubble sizing\n",
     "\n",
@@ -290,7 +299,7 @@
     "df_interpolated['date_str']=df_interpolated.date.astype(str)\n",
     "import plotly.express as px\n",
     "fig = px.scatter(data_frame=df_interpolated,\n",
-    "                title='Full Vaccinated vs Daily Vaccinations (LOG,LOG)',\n",
+    "                title='Full Vaccinated vs Daily Vaccinations (LOG, LOG)',\n",
     "                 x=\"daily_vaccinations_per_million\",\n",
     "                 y=\"people_fully_vaccinated_per_hundred\",\n",
     "                 animation_frame=\"date_str\",\n",
@@ -329,7 +338,7 @@
     "df_interpolated['date_str']=df_interpolated.date.astype(str)\n",
     "import plotly.express as px\n",
     "fig = px.scatter(data_frame=df_interpolated,\n",
-    "                 title='Full Vaccinated vs Daily Vaccinations (LOG,LOG)',\n",
+    "                 title='Full Vaccinated vs Daily Vaccinations (LOG, LOG)',\n",
     "                 x=\"daily_vaccinations_per_million\",\n",
     "                 y=\"people_fully_vaccinated_per_hundred\",\n",
     "                 animation_frame=\"date_str\",\n",
@@ -372,7 +381,7 @@
     "df_interpolated['date_str']=df_interpolated.date.astype(str)\n",
     "import plotly.express as px\n",
     "fig = px.scatter(data_frame=df_interpolated,\n",
-    "    title='Full Vaccinated vs Daily Vaccinations (LOG,LOG)',\n",
+    "    title='Full Vaccinated vs Daily Vaccinations (LOG, LOG)',\n",
     "                 x=\"daily_vaccinations\",\n",
     "                 y=\"people_fully_vaccinated_per_hundred\",\n",
     "                 animation_frame=\"date_str\",\n",
@@ -411,7 +420,7 @@
     "df_interpolated['date_str']=df_interpolated.date.astype(str)\n",
     "import plotly.express as px\n",
     "fig = px.scatter(data_frame=df_interpolated,\n",
-    "                 title='Full Vaccinated vs Daily Vaccinations (LOG,LINEAR)',\n",
+    "                 title='Full Vaccinated vs Daily Vaccinations (LOG, LINEAR)',\n",
     "                 x=\"daily_vaccinations\",\n",
     "                 y=\"people_fully_vaccinated_per_hundred\",\n",
     "                 animation_frame=\"date_str\",\n",
@@ -437,7 +446,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## linear vacitations per million by date on the x axis"
+    "## linear vacitations per million by date on the x axis \n",
+    "Specific countries"
    ]
   },
   {
@@ -450,7 +460,7 @@
     "import plotly.express as px\n",
     "df_filtered = df_interpolated[df_interpolated[\"location\"].isin([\"United States\", \"Germany\", \"United Kingdom\", \"Canada\"])]\n",
     "fig = px.line(data_frame=df_filtered,\n",
-    "                 title='Vaccinations per million across time selected countries',\n",
+    "                 title='Vaccinations per million across time selected countries,\n",
     "              x=\"date_str\",\n",
     "              y=\"daily_vaccinations_per_million\",\n",
     "             #line_group=\"location\",\n",
